# InSituPy-1

./: .gitignore  LICENSE  README.md  cookietemple.cfg  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.md  tutorials.md  usage.md
docs/tutorials/: 04_InSituPy_demo_crop.ipynb  07_InSituPy_InSituExperiment.ipynb
insitupy/: __init__.py  _constants.py  _exceptions.py  _warnings.py  main.py  palettes.py
insitupy/_core/: _callbacks.py  _checks.py  _deprecated.py  _layers.py  _mixins.py  _save.py  _scanorama.py  _utils.py  _widgets.py  _xenium.py  config.py  dataclasses.py  insitudata.py  insituexperiment.py  io.py  reader.py  registration.py  xenium.py  xeniumdata.py
insitupy/calc/: calc.py  dge.py
insitupy/datasets/: README.md  __init__.py  _datasets.py  datasets.py  download.py  download_data.py
insitupy/image/: __init__.py  io.py  registration.py  utils.py
insitupy/images/: __init__.py  axes.py  deconvolution.py  format.py  io.py  registration.py  utils.py
insitupy/io/: __init__.py  _read.py  _segmentation.py  _write.py  baysor.py  files.py  geo.py  io.py  plots.py  url.py
insitupy/plotting/: __init__.py  _colors.py  go.py  plots.py  (+3 more)
notebooks/: 00_InSituPy_demo.ipynb  00_InSituPy_demo_datasets.ipynb  00_InSituPy_demo_download_data.ipynb  00_interactive_cropping.ipynb  00_mixed_development.ipynb  01_InSituPy_demo_download_data.ipynb  01_InSituPy_demo_register_images copy.ipynb  01_InSituPy_demo_register_images.ipynb  02_InSituPy_demo_analyze.ipynb  02_InSituPy_demo_register_images.ipynb  03_InSituPy_demo_analyze.ipynb  03_InSituPy_demo_annotations.ipynb  04_InSituPy_demo_annotations.ipynb  04_InSituPy_demo_crop.ipynb  05_InSituPy_cell_type_annotation.ipynb  05_InSituPy_demo_crop.ipynb  05_InSituPy_demo_datasets.ipynb  05_InSituyPy_demo_download_function.ipynb  06_InSituPy_cell_type_annotation.ipynb  06_InSituPy_demo_datasets.ipynb  06_InSituPy_demo_datasets2.ipynb  06_InSituPy_gene_expression_along_axis.ipynb  06_InSituPy_gene_expression_along_axis_pattern.ipynb  07_InSituPy_InSituExperiment.ipynb  07_InSituPy_gene_expression_along_axis.ipynb  07b_InSituPy_gene_expression_kernel_density.ipynb  08_InSituPy_InSituExperiment.ipynb  08_InSituPy_differential_gene_expression.ipynb  09_InSituPy_InSituExperiment.ipynb  09_InSituPy_build_object_from_scratch.ipynb  09_InSituPy_build_objects_from_scratch.ipynb  10_InSituPy_differential_gene_expression_publication.ipynb  @testing.ipynb  InSituPy_demo_differentiell_gene_expression_without_annotation.ipynb  XX_InSituPy_extract_individual_images.ipynb  XX_napari_tests.ipynb  XX_test_magicgui.ipynb  read_sc_magdalena.ipynb  test_rendering.ipynb
scripts/: export_annotations_OME-TIFF.groovy
tests/: imports_test.py  test_decode.py  test_import.py  test_insitudata.py  test_parse_geopandas.py  test_spatialdata.py  test_tospatialdata.py  test_version.py
xenium_panels/: Xenium_hBrain_v1_metadata.csv  Xenium_hBreast_v1_metadata.csv  Xenium_hLung_v1_metadata.csv  Xenium_hMulti_v1_metadata.csv  Xenium_mBrain_v1.1_metadata.csv
xeniumdata/: __init__.py  main.py  panels.py  utils.py
(+610 files in other folders)
