[tool.poetry]
name = "insitupy"
version = "0.1.0"
description = "Package introducing the XeniumData structure to read an analyze Xenium in situ data in a structured manner."
authors = ["jwrth <j.wirth@tum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scanpy = "^1.9.5"
dask-image = "^2023.8.1"
parse = "^1.19.1"
dask = {extras = ["diagnostics"], version = "^2023.9.2"}
opencv-python = "^4.8.0.76"
scikit-image = "^0.21.0"
geopandas = "^0.14.0"
openpyxl = "^3.1.2"
leidenalg = "^0.10.1"
napari = {extras = ["all"], version = "^0.4.18"}
asciitree = "^0.3.3"
annoy = { file = "wheels/annoy-1.17.0-cp39-cp39-win_amd64.whl" }
scanorama = "^1.7.4"
pytest = "^7.4.2"
xmltodict = "^0.13.0"
zarr = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
