[tool.poetry]
name = "insitupy"
version = "0.3.4"#<<COOKIETEMPLE_FORCE_BUMP>>
description = "Package introducing the InSituPy framework to comprehensively analyze In Situ Sequencing data."
license = "BSD-3-Clause"
authors = ["jwrth <j.wirth@tum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
# mandatory dependencies
python = "^3.9.18"
scanpy = "1.10.3" #"1.9.5"
numpy = "1.26.4"
dask-image = "2023.8.1"
parse = "1.19.1"
dask = {extras = ["diagnostics"], version = "2023.9.2"}
opencv-python = "4.8.0.76"
scikit-image = "0.21.0"
geopandas = "0.14.0"
openpyxl = "3.1.2"
leidenalg = "0.10.1"
asciitree = "0.3.3"
#annoy = { file = "wheels/annoy-1.17.0-cp39-cp39-win_amd64.whl" }
scanorama = "1.7.4"
pytest = "7.4.2"
xmltodict = "0.13.0"
zarr = "2.16.1"
pyarrow = "14.0.1"
fastparquet = "2023.10.1"
imagecodecs = "2023.9.18"
rasterio = "1.3.9"
loompy = "3.0.7"

# optional dependencies
napari = {extras = ["all"], version = "0.4.18", optional = true}
scikit-misc = "0.3.1"
adjusttext = "^1.2.0"
toml = "^0.10.2"

[tool.poetry.extras]
napari = ["napari"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
