[tool.poetry]
name = "insitupy"
version = "0.5.5"#<<COOKIETEMPLE_FORCE_BUMP>>
description = "Package introducing the InSituPy framework to analyze single-cell spatial transcriptomics data."
license = "BSD-3-Clause"
authors = ["jwrth <j.wirth@tum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
# mandatory dependencies
python = "^3.9.18"
scanpy = {version = "1.10.3", extras = ["leiden"]}
numpy = "1.26.4"
napari = {version = "0.4.18", extras = ["all"]}
#PyQt5 = "5.15.11"
dask-image = "2023.8.1"
parse = "1.19.1"
dask = "^2023.9.2"
opencv-python = "4.8.0.76"
scikit-image = "^0.21.0"
geopandas = "^0.14.4"
fiona = "1.10.0"
openpyxl = "^3.1.2"
#asciitree = "0.3.3"
pytest = "^7.4.2"
xmltodict = "0.13.0"
zarr = "^2.16.1"
pyarrow = "^14.0.1"
fastparquet = "^2023.10.1"
#imagecodecs = "^2023.9.18"
#rasterio = "1.3.9"
#loompy = "3.0.7"
toml = "^0.10.2"
plottable = "0.1.5"
#scikit-misc = "0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
